# maas

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  testsupport.py
.github/: pull_request_template.md
migrations/: 0001_initial.sql  0002_task_capability_grants.sql  0003_failure_log.sql  0004_escalation_queue.sql  0005_task_retry_state.sql  0006_quarantine_queue.sql  0007_task_retry_schedule.sql  0008_dead_letter_queue.sql  0009_project_lifecycle.sql  0010_provider_job_queue.sql  0011_provider_workers.sql  0012_task_synthesis_metadata.sql  0013_verification_runs.sql  0014_task_git_workspaces.sql  0015_notification_outbox.sql  0016_autopilot_runtime_and_notification_retry.sql  0017_side_effect_retry_safety.sql  0018_trust_runs_and_fault_injection.sql
scripts/: maas-dev  maas-trust-run
tests/: test_alerts_live_api.py  test_allocator_api.py  test_api_board_actions.py  test_artifacts_api.py  test_autopilot_runtime.py  test_board.py  test_bootstrap.py  test_codex_mvp_api.py  test_dashboard_api.py  test_escalations_api.py  test_git_workspaces_api.py  test_github_project_sync.py  test_lifecycle.py  test_notifications_api.py  test_operator_inbox_api.py  test_orchestrator_api.py  test_portfolio_api.py  test_projects_api.py  test_provider_jobs_api.py  test_provider_runtime.py  test_reconciliation_api.py  test_recovery_policy_api.py  test_repo_browser_api.py  test_scheduler_api.py  test_supervisor_api.py  test_theater_api.py  test_timeline_api.py  test_trust_gate_api.py  test_trust_runs_api.py  test_verification_api.py
web/: index.html  package.json  (+1 more)
(+176 files in other folders)
