[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "maas"
version = "0.1.0"
description = "Multi-Agent Agentic System with a board-first operating model."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastapi>=0.100",
  "pydantic>=1.10",
  "PyYAML>=6.0",
  "uvicorn>=0.20",
]

[project.scripts]
maas = "maas.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

